--- a/wiki/skin/assets/stylish/global/_variables.scss
+++ b/wiki/skin/assets/stylish/global/_variables.scss
@@ -55,7 +55,7 @@ $global_radius:               4px; //Setup global border radius (buttons, forms 
 
 // Default Link color
 $link_color:                  $color_sushi;
-$link_color_hover:            darken($color_sushi, 15%);;
+$link_color_hover:            darken($color_sushi, 15%);
 
 
 $body_font_family:            'Open Sans', Arial, Helvetica, sans-serif;
