--- a/framework/assets/stylish/components/_block.scss
+++ b/framework/assets/stylish/components/_block.scss
@@ -8,7 +8,7 @@
 
   .b_title{
     position: relative;
-    @include move(bottom, $block_b_title_move_bottom);
+    @include move(bottom, $block_b_title_move_bottom, $default_show:true);
     @include move_in(bottom, $block_b_title_move_in_bottom);
     @include border($block_border_position, $block_border_width, $block_border_style, $block_border_color);
 
