--- a/framework/assets/stylish/global/_forms.scss
+++ b/framework/assets/stylish/global/_forms.scss
@@ -155,9 +155,8 @@ html.show_input{
 /* Setup forms layout */
 form, .form{
   .field{
-    margin-bottom: $form_field_move; position: relative; list-style: none;
-    &.large { margin-bottom: $form_field_move_large;}
-    &.small { margin-bottom: $form_field_move_small;}
+    position: relative; list-style: none; @include move(bottom, $form_field_move_default, $default_show:true);
+
     &.last{ margin-bottom: 0}
 
     &[data-required="true"] label,
@@ -186,7 +185,7 @@ form, .form{
   //validation error (validation-advice for magento)
   .validation-advice,
   .error{
-    color: $form_error; @include font_style(14px); margin-top: $form_error_move;
+    color: $form_error; @include font_style(14px); margin-top: $form_error_move_default;
     &:before{@extend .sy_icon; @extend .sy_remove_round:before; padding-right: 10px; vertical-align: bottom}
   }
 }
