--- a/wiki/skin/assets/stylish/global/_variables_project.scss
+++ b/wiki/skin/assets/stylish/global/_variables_project.scss
@@ -1,6 +1,8 @@
 /* VARIABLES PROJECT SPECIFIC */
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
+$body_font_family:            'Open Sans', Arial, Helvetica, sans-serif;
+$body_font_weight:            400;
 
 
 // ---------------------------------------- //
@@ -9,7 +11,7 @@ $header_height:     64px;
 $header_z_index:    10000;
 
 $header_nav_link_padding:     ($header_height - $mediumlh)/2;
-$header_nav_link_btn_padding: ($header_height - $btn_height)/2;
+$header_nav_link_btn_padding: 12px;
 
 
 // ---------------------------------------- //
